--- a/bomberos-app/src/app/app.html
+++ b/bomberos-app/src/app/app.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="warn" class="main-toolbar">
+  <span>SIGBA</span>
+</mat-toolbar>
+<div class="content-wrapper">
+  <router-outlet></router-outlet>
+</div>
