--- a/bomberos-app/src/app/components/login/login.html
+++ b/bomberos-app/src/app/components/login/login.html
@@ -1,26 +1,27 @@
-<div class="login-container">
-  <mat-card class="login-card">
-    <mat-card-header>
-      <mat-card-title>Iniciar Sesión</mat-card-title>
-      <mat-card-subtitle>Acceso al sistema de Bombero Accidentado.</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <mat-form-field appearance="fill">
-          <mat-label>Usuario</mat-label>
-          <input matInput formControlName="username" placeholder="ej: admin">
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Contraseña</mat-label>
-          <input matInput formControlName="password" type="password" placeholder="ej: password">
-        </mat-form-field>
-        <div *ngIf="errorMessage" class="error-message">
-          {{ errorMessage }}
-        </div>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Ingresar</button>
-    </mat-card-actions>
-  </mat-card>
-</div>
+<mat-card class="login-card">
+  <mat-card-header>
+    <mat-card-title>Inicio de Sesión</mat-card-title>
+  </mat-card-header>
+
+  <mat-card-content>
+    <p class="login-subtitle">Acceso al Sistema de Bombero Accidentado.</p>
+    
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      
+      <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="username" placeholder="hola@tuemail.com">
+      </mat-form-field>
+      
+      <mat-form-field appearance="outline">
+        <mat-label>Contraseña</mat-label>
+        <input matInput formControlName="password" type="password">
+      </mat-form-field>
+      
+      <button mat-flat-button color="warn" class="login-button" type="submit" [disabled]="loginForm.invalid">
+        Iniciar Sesión
+      </button>
+
+    </form>
+  </mat-card-content>
+</mat-card>
