--- a/bomberos-app/src/styles.scss
+++ b/bomberos-app/src/styles.scss
@@ -1,39 +1,28 @@
+// src/styles.scss
 
-// Include theming for Angular Material with `mat.theme()`.
-// This Sass mixin will define CSS variables that are used for styling Angular Material
-// components according to the Material 3 design spec.
-// Learn more about theming and how to use it for your application's
-// custom components at https://material.angular.dev/guide/theming
-@use '@angular/material' as mat;
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
-html {
-  @include mat.theme((
-    color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
+/* Estilos globales */
+html, body { 
+    height: 100%; 
+}
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background-color: #f4f4f4; /* Fondo gris claro para toda la app */
 }
 
-body {
-  // Default the application to a light color theme. This can be changed to
-  // `dark` to enable the dark color theme, or to `light dark` to defer to the
-  // user's system settings.
-  color-scheme: light;
-
-  // Set a default background, font and text colors for the application using
-  // Angular Material's system-level CSS variables. Learn more about these
-  // variables at https://material.angular.dev/guide/system-variables
-  background-color: var(--mat-sys-surface);
-  color: var(--mat-sys-on-surface);
-  font: var(--mat-sys-body-medium);
-
-  // Reset the user agent margin.
-  margin: 0;
+/* Sobrescribe los colores primarios para que sean rojos */
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: #fff !important;
 }
-/* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-primary {
+    --mdc-theme-primary: #d32f2f; /* Rojo principal */
+    --mdc-theme-on-primary: #fff; /* Texto blanco sobre el rojo */
+}
+
+.mat-warn {
+    --mdc-theme-primary: #d32f2f;
+    --mdc-theme-on-primary: #fff;
+}
