--- a/bomberos-app/src/app/components/login/login.html
+++ b/bomberos-app/src/app/components/login/login.html
@@ -4,8 +4,8 @@
   </mat-card-header>
 
   <mat-card-content>
-    <p class="login-subtitle">Acceso al Sistema de Bombero Accidentado.</p>
-    
+    <p class="login-subtitle">Acceso al Sistema de Gestión de Bomberos Antofagasta.</p>
+
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       
       <mat-form-field appearance="outline">
