--- a/bomberos-app/src/app/app.html
+++ b/bomberos-app/src/app/app.html
@@ -1,5 +1,12 @@
 <mat-toolbar color="warn" class="main-toolbar">
-  <span>SIGBA</span>
+  <div class="toolbar-content">
+    <span class="toolbar-title">SIGBA</span>
+    <span class="toolbar-spacer"></span>
+    <a *ngIf="showBackButton()" mat-flat-button class="back-button" routerLink="/historial">
+      <mat-icon>arrow_back</mat-icon>
+      Volver
+    </a>
+  </div>
 </mat-toolbar>
 <div class="content-wrapper">
   <router-outlet></router-outlet>
