--- a/bomberos-app/src/app/app.scss
+++ b/bomberos-app/src/app/app.scss
@@ -1,21 +1,50 @@
-// src/app/app.component.scss
-
-// Esto asegura que el componente principal ocupe toda la pantalla
 :host {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
 }
 
 .main-toolbar {
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  height: 80px; 
+  padding: 0 24px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.toolbar-content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.toolbar-title {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.toolbar-logo {
+  height: 50px; 
+  margin-right: 16px;
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
+.back-button {
+  background-color: white !important; 
+  color: black !important;          
+  mat-icon {
+    color: black !important;
+  }
 }
 
 .content-wrapper {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 32px;
   display: flex;
   justify-content: center;
-  align-items: flex-start; /* Cambiado de 'center' a 'flex-start' */
-  flex-grow: 1;
-  padding: 32px; /* Un poco más de espacio */
-  overflow-y: auto; /* Permite scroll si el contenido es muy largo */
+  align-items: flex-start;
 }
