feat: add functionality to handle user preferences

--- a/bomberos-app/src/app/app.html
+++ b/bomberos-app/src/app/app.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="warn" class="main-toolbar">
   <div class="toolbar-content">
+    <a routerLink="/" class="toolbar-logo-container"> <img src="/logo_bomberos.png" alt="Logo de SIGBA" class="toolbar-logo">
+    </a>
     <span class="toolbar-title">SIGBA</span>
     <span class="toolbar-spacer"></span>
     <a *ngIf="showBackButton()" mat-flat-button class="back-button" routerLink="/historial">
