--- a/bomberos-app/src/app/app.scss
+++ b/bomberos-app/src/app/app.scss
@@ -17,24 +17,26 @@
   display: flex;
   align-items: center;
   width: 100%;
+  height: 100%; /* ¡Añadir esta línea! */
 }
 
-.toolbar-title {
-  font-size: 24px;
-  font-weight: 500;
+/* Nuevos estilos para el logo */
+.toolbar-logo, .toolbar-logo-container {
+  height: 100%; /* Asegura que el contenedor y la imagen se ajusten a la altura del toolbar */
 }
 
 .toolbar-logo {
-  height: 50px; 
   margin-right: 16px;
+  object-fit: contain; /* Evita que la imagen se distorsione */
 }
 
 .toolbar-spacer {
   flex: 1 1 auto;
 }
+
 .back-button {
   background-color: white !important; 
-  color: black !important;          
+  color: black !important;          
   mat-icon {
     color: black !important;
   }
@@ -47,4 +49,14 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+}
+
+@media (max-width: 600px) {
+  .toolbar-logo {
+    height: 30px; /* Tamaño más pequeño para móviles */
+    margin-right: 4px;
+  }
+  .toolbar-title {
+    font-size: 1.2rem;
+  }
 }
