--- a/bomberos-app/src/app/components/historial/historial.html
+++ b/bomberos-app/src/app/components/historial/historial.html
@@ -6,7 +6,7 @@
 
   <div class="new-process-box">
     <h2>Iniciar Nuevo Proceso</h2>
-    <a mat-flat-button color="warn" routerLink="/app">
+    <a mat-flat-button color="warn" routerLink="/document-upload">
       <mat-icon>add</mat-icon>
       Iniciar documentación de Bombero Accidentado
     </a>
@@ -23,7 +23,7 @@
 
       <ng-container matColumnDef="nombre">
         <mat-header-cell *matHeaderCellDef> NOMBRE BOMBERO </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.nombre}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.bombero_nombre}} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="compania">
@@ -33,7 +33,7 @@
 
       <ng-container matColumnDef="fecha">
         <mat-header-cell *matHeaderCellDef> FECHA DE SOLICITUD </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.fecha}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.created_at | date:'dd/MM/yyyy'}} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="estado">
@@ -47,11 +47,11 @@
         <mat-header-cell *matHeaderCellDef> ACCIONES </mat-header-cell>
         <mat-cell *matCellDef="let element">
           
-          <a mat-icon-button color="primary" [routerLink]="['/app', element.id]" aria-label="Modificar">
+          <a mat-icon-button color="primary" [routerLink]="['/document-upload', element.id]" aria-label="Modificar">
             <mat-icon>edit</mat-icon>
           </a>
-          <button mat-icon-button color="accent" aria-label="Ver detalles">
-            <mat-icon>visibility</mat-icon>
+          <button mat-icon-button color="warn" (click)="confirmDelete(element)" aria-label="Eliminar registro">
+            <mat-icon>close</mat-icon>
           </button>
         </mat-cell>
       </ng-container>
