fix: small fixes on frontend login.

--- a/bomberos-app/src/styles.scss
+++ b/bomberos-app/src/styles.scss
@@ -6,7 +6,7 @@ html, body {
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
-    background-color: #f4f4f4; 
+    background-color: #ffffff; 
 }
 
 .mdc-text-field--filled:not(.mdc-text-field--disabled) {
