--- a/bomberos-app/src/app/app.html
+++ b/bomberos-app/src/app/app.html
@@ -1,6 +1,7 @@
-<mat-toolbar color="warn" class="main-toolbar">
+<mat-toolbar color="warn" class="main-toolbar" *ngIf="!isLoginPage()">
   <div class="toolbar-content">
-    <a routerLink="/" class="toolbar-logo-container"> <img src="/logo_bomberos.png" alt="Logo de SIGBA" class="toolbar-logo">
+    <a routerLink="/" class="toolbar-logo-container"> 
+        <img src="/logo_bomberos.png" alt="Logo de SIGBA" class="toolbar-logo">
     </a>
     <span class="toolbar-title">SIGBA</span>
     <span class="toolbar-spacer"></span>
@@ -10,6 +11,7 @@
     </a>
   </div>
 </mat-toolbar>
+
 <div class="content-wrapper">
   <router-outlet></router-outlet>
 </div>
